# API-Integration-Agent

api-integration-agent/: .gitignore  main.py  pyproject.toml
api-integration-agent/alembic/: env.py
api-integration-agent/alembic/versions/: 6df9355ccf41_create_messages_table.py  6f5745cca683_create_document_model_and_changes_in_.py  ca18f9a30f8f_create_conversation_document_model.py  d0c619bc8327_create_conversations_table.py  d7e4c5956f43_create_conversations_table.py
api-integration-agent/api/: conversation_controller.py  document_controller.py  health.py
api-integration-agent/db/: database.py
api-integration-agent/model/: conversation.py
api-integration-agent/models/: conversation.py  conversation_document.py  document.py  message.py
api-integration-agent/schemas/: create_conversation_request.py  send_message_request.py
api-integration-agent/services/: conversation_service.py  document_service.py
